<resources>
    <string name="app_name">Gasto Viagem</string>
    <string name="distance">Distância</string>
    <string name="total_km">Total de Quilômetros</string>
    <string name="price">Preço</string>
    <string name="autonomy">Autonomia</string>
    <string name="kms_per_liter">KMs por Litro</string>
    <string name="total_spend">Seu gasto total Será de: </string>
    <string name="total_value">R$ 0</string>
    <string name="calculate">Calcular</string>
    <string name="price_per_liter">Preço por Litro</string>
    <string name="validation_fill_all_fields">"preencha todos os campos"</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>

    "preencha todos os campos"

</resources>